Navbar fixed and dark mode button added

--- a/asset/style.css
+++ b/asset/style.css
@@ -8,36 +8,36 @@
 /* BODY */
 body {
   font-family: 'Poppins', sans-serif;
-  color: #111;
+  color: rgb(96, 236, 229);
 }
 
 /* NAVBAR SEARCH */
 .navbar .form-control {
-  border: 2px solid #000;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 30px;
-  padding: 10px 18px;
+  padding: 8px 16px;
   font-weight: 600;
   box-shadow: none;
 }
 
 .navbar .form-control:focus {
-  border: 2px solid #000;
+  border: 2px solid #000000;
   outline: none;
-  box-shadow: none;
+  box-shadow: rgb(2, 1, 1);
 }
 
 /* NAVBAR LINKS */
 .navbar-nav .nav-link {
   font-weight: 600;
-  color: #111;
+  color: #000000;
   padding: 8px 14px;
   border-radius: 50px;
   transition: 0.3s;
 }
 
 .navbar-nav .nav-link:hover {
-  background: #000;
-  color: #fff;
+  background: #98760695;
+  color: #000000;
 }
 
 /* DROPDOWN */
@@ -55,7 +55,7 @@ body {
 .hero {
   width: 100%;
   height: 90vh;
-  background-image: url("../asset/img/hd_image.webp");
+  background-image: url("../asset/img/living-room-581073.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -65,7 +65,7 @@ body {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.45);
+  background: rgba(0, 0, 0, 0.45);
 }
 
 .hero-content {
@@ -138,10 +138,10 @@ body {
 }
 
 .room-box {
-  background: rgb(205, 196, 189);
+  background: rgba(239, 239, 238, 0.749);
   padding: 12px;
   border-radius: 12px;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+  box-shadow: 0 8px 25px rgb(0, 0, 0);
 }
 
 .room-box img {
